--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "rimraf dist && nest build && node dist/main",
+    "start": "rimraf dist && nest build && node dist/main.js",
     "start:dev": "rimraf dist && nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/main.js",
     "lint": "eslint '{src,apps,libs,test}/**/*.ts' --fix",
     "test": "jest",
     "test:watch": "jest --watch",
